--- a/app/views/shared/_footer_scripts.html.erb
+++ b/app/views/shared/_footer_scripts.html.erb
@@ -9,7 +9,8 @@
   <% end %>
 <% end %>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/rem/1.3.4/js/rem.min.js"></script>
+<%# 2024-09-26 AA removed rem.min.js. I believe it is no longer needed. %>
+<%# script src="//cdnjs.cloudflare.com/ajax/libs/rem/1.3.4/js/rem.min.js"></script %>
 
 <% if Rails.env.development? || params[:dev] == "true" %>
   <hr/>
