--- a/app/views/shared/_product_selector_strip.html.erb
+++ b/app/views/shared/_product_selector_strip.html.erb
@@ -2,9 +2,9 @@
   <div class="homepage_block ">
     <%= link_to product_selector_path do %>
       <% if File.exist?(Rails.root.join("app", "assets", "images", website.folder, "ProductSelector_Banner_#{I18n.locale.to_s}.jpg")) %>
-        <%= image_tag("#{website.folder}/ProductSelector_Banner_#{I18n.locale.to_s}.jpg", alt: "Product Selector Banner") %>
+        <%= image_tag("#{website.folder}/ProductSelector_Banner_#{I18n.locale.to_s}.jpg", alt: "Product Selector Banner", loading: :eager) %>
       <% else %>
-        <%= image_tag("#{website.folder}/ProductSelector_Banner_en.jpg", alt: "Product Selector Banner") %>
+        <%= image_tag("#{website.folder}/ProductSelector_Banner_en.jpg", alt: "Product Selector Banner", loading: :eager) %>
       <% end %>
     <% end %>
   </div>
