--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,8 @@
         <%= raw website.value_for('other_header_scripts') %>
       <% end %>
     <% end %>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500"/>
 		<%= stylesheet_link_tag website.folder, media: :all %>
 
