--- a/app/views/crown/shared/_featured_products_strip.html.erb
+++ b/app/views/crown/shared/_featured_products_strip.html.erb
@@ -48,7 +48,7 @@
 				</div>
 				<div class="large-7 columns show-for-large-up">
 					<div class="featured_image_container right">
-						<%= link_to(image_tag(featured_product.photo.product_attachment.url(:original), alt: featured_product.name, lazy: false, class: "featured_image"), featured_product) %>
+						<%= link_to(image_tag(featured_product.photo.product_attachment.url(:full_width), alt: featured_product.name, lazy: false, class: "featured_image"), featured_product) %>
 					</div>
 				</div>
 			</div>
