--- a/app/views/shared/_product_families_strip.html.erb
+++ b/app/views/shared/_product_families_strip.html.erb
@@ -17,6 +17,7 @@
             <div class="text-center product-family-total-count"
                  data-product-family-id="<%= pf.to_param %>"
                  id="products-count-for-<%= pf.to_param %>">
+              &nbsp;
             </div>
           </li>
         <% end %>
