More js reduction, security update for wordpress

--- a/app/views/shared/_footer_scripts.html.erb
+++ b/app/views/shared/_footer_scripts.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "vendor/modernizr" %>
 <%= javascript_include_tag "common_footer" %>
 
 <%= yield :support_chat_javascript %>
