--- a/app/views/products/preview.html.erb
+++ b/app/views/products/preview.html.erb
@@ -1,28 +1,31 @@
-<h1 style="font-size: 16px;">Product Preview Login</h1>
+<div style="background: #EEE; padding: 20px 30px;">
+	<div class="overline"></div>
+	<h2>Product Preview Login</h2>
 
-<% unless @errors.blank? %>
-  <p style="font-size: 120%; color: red;"><%= @errors %></p>
-<% end %>
+	<% unless @errors.blank? %>
+	  <p style="font-size: 120%; color: red;"><%= @errors %></p>
+	<% end %>
 
-<%= form_for @product, url: preview_product_path(@product), method: :put do |f| %>
+	<%= form_for @product, url: preview_product_path(@product), method: :put do |f| %>
 
-	<div class="form_field" style="margin: 10px 0px;">
-		<%= f.label :password, "Enter the password you received" %><br/>
-		<%= f.text_field :password, style: "font-size: 140%; padding: 2px;", size: 15, autocomplete: "off" %>
-	</div>
+		<div class="form_field" style="margin: 10px 0px;">
+			<%= f.label :password, "Enter the password you received" %>
+			<%= f.text_field :password, style: "font-size: 140%; padding: 2px;", size: 15, autocomplete: "off" %>
+		</div>
 
-	<div style="overflow: auto; max-height: 180px; margin: 20px 0px;">
-		<p><b>Terms &amp; Conditions</b></p>
-		<%=raw @terms_and_conditions %>
-	</div>
+		<div style="overflow: auto; max-height: 180px; margin: 20px 0px; border: 1px solid #999; background: white; padding: 30px;">
+			<p><b>Terms &amp; Conditions</b></p>
+			<%=raw @terms_and_conditions %>
+		</div>
 
-	<div class="form_field" style="margin: 10px 0px;">
-		Enter your email address if you agree<br/>
-		<%= text_field_tag :email, "", size: 40, style: "font-size: 120%; padding: 2px;" %>
-	</div>
+		<div class="form_field" style="margin: 10px 0px;">
+			<%= f.label :email, "Enter your email address if you agree" %>
+			<%= text_field_tag :email, "", size: 40, style: "font-size: 120%; padding: 2px;" %>
+		</div>
 
-	<div class="form_field" style="margin: 20px 0px;">
-		<%= f.submit "continue", style: "font-size: 140%; padding: 4px" %>
-	</div>
+		<div class="form_field" style="margin: 20px 0px;">
+			<%= f.submit "continue", style: "font-size: 140%; padding: 4px 10px" %>
+		</div>
 
-<% end %>
+	<% end %>
+</div>
