Amx security info request form update

--- a/app/views/jitc_requests/index.html.erb
+++ b/app/views/jitc_requests/index.html.erb
@@ -46,7 +46,7 @@ title_to_use = "Request Security Information"
     #         style: 'height: 200px;'
     #     },
     #     required: true %> -->
-    <%= f.input :products, as: :text, label: "Products", placeholder: "Enter products you would like security information about" %>
+    <%= f.input :products, as: :text, label: "Products", placeholder: "Enter products you would like security information about", required: true %>
     </fieldset>
     
     <h5>Additional Information</h5>
